[project]
name = "subdominator"
version = "3.0.0"
description = "High-performance passive subdomain enumeration engine for effortless asset discovery and rapid reconnaissance."
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [
  { name = "D. Sanjai Kumar" }
]
dependencies = [
  "asyncpg>=0.30.0",
  "aiofiles>=24.1.0",
  "aiohttp>=3.11.18",
  "aiosqlite>=0.21.0",
  "appdirs>=1.4.4",
  "pydantic>=2.11.3",
  "pydantic-settings>=2.9.1",
  "rich>=14.0.0",
  "richparser>=1.0.1",
  "revoltlogger>=1.0.1",
  "revoltutils>=1.0.2",
  "sqlalchemy>=2.0.40",
  "tldextract>=5.3.0",
  "gitupdater>=1.0.0",
]

[project.optional-dependencies]
reports = [
    "jinja2>=3.1.5",
]

[project.scripts]
subdominator = "subdominator.cli.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/subdominator"]

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "strict"

[tool.ruff]
line-length = 100
target-version = "py313"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-anyio>=0.0.0",
    "pytest-asyncio>=1.3.0",
]
